Fix Dark Mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -349,7 +349,7 @@ pre{
 }
 
 .show__more{
-    background-color: var(--white);
+    background-color: var(--bg);
     color: var(--color);
     padding: 0.5rem;
     font-size: 1.2rem;
