--- a/styles/third_party.scss
+++ b/styles/third_party.scss
@@ -94,6 +94,10 @@
     &:hover {
         background-color: #f6f8fa;
         cursor: pointer;
+
+        @media (prefers-color-scheme: dark) {
+            background-color: #24292e;
+        }
     }
 
     // Add the repository name and description styles
